[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.3",
    "numpy>=1.26.0",
    "openai>=1.63.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.11.3",
    "spacy>=3.8.4",
    "streamlit>=1.42.1",
    "textblob>=0.19.0",
]
